<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="google_map_api_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA6bpj-L6gu40zNb2eK2cx69ysRuPQo8vo</string>

    <string name="app_name">AndroidDogs</string>
    <string name="title_sing_in">Sing In</string>
    <string name="title_sing_up">Register</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login_button">Log In</string>
    <string name="logout_button">Log Out</string>
    <string name="back_button">Back</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_birthdate">Birthdate (YYYY-MM-DD)</string>
    <string name="register_button">Log Up</string>
    <string name="creators">Application Creators</string>
    <string name="text_social_network">or connect using</string>
    <string name="creator_names">Names of the Creators:</string>
    <string name="creator_name_victor">Victor Lopez</string>
    <string name="creator_name_dani">Daniel Narvaez</string>
    <string name="creator_name_david">David Rodriguez</string>
    <string name="app_description">Application Description:</string>
    <string name="email_empty">The email field is empty.</string>
    <string name="password_empty">The password field is empty.</string>
    <string name="fullname_empty">The full name field is empty.</string>
    <string name="username_empty">The username field is empty.</string>
    <string name="message_authentication_required">You need to authenticate</string>
    <string name="message_welcome">Welcome</string>
    <string name="message_register_success">Successful registration</string>
    <string name="message_login_success">Login Successful</string>

    <string name="app_description_text">This application allows dog walkers to coordinate real-time walks, create editable routes, and manage multiple registered clients.</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="password_difer">Passwords do not match</string>
    <string name="your_web_client_id" translatable="false">962455435496-ue92niapvf4a2kmlqht62uijlostaesm.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>