<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="50dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    android:layout_margin="30dp"
    android:backgroundTint="@color/light_brown_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creators"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creator_names"
            android:textStyle="bold"
            android:layout_marginBottom="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creator_name_victor"
            android:layout_marginBottom="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creator_name_dani"
            android:layout_marginBottom="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creator_name_david"
            android:layout_marginBottom="16dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:textStyle="bold"
            android:layout_marginBottom="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_description_text" />
        <Button
        android:id="@+id/btBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/back_button"
        android:textColor="@color/light_green_1"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>