<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    android:layout_margin="30dp"
    android:backgroundTint="@color/light_brown_1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:autofillHints="@string/hint_username" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:autofillHints="@string/hint_password" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:autofillHints="@string/hint_name" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/hint_email" />

        <EditText
            android:id="@+id/editTextBirthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_birthdate"
            android:inputType="date"
            android:autofillHints="@string/hint_birthdate" />

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:textColor="@color/light_green_2" />

    </LinearLayout>

</androidx.cardview.widget.CardView>